# esp32

./: .gitmodules  README.md
energy_scan/: CMakeLists.txt  README.md
energy_scan/main/: CMakeLists.txt  app_main.c  idf_component.yml  ieee_scan.c  ieee_scan.h  ui_spectrum.c
energy_scan/main/LCD_Driver/: ST7789.c  ST7789.h
esp32-contiki/: CMakeLists.txt  README.md
esp32-contiki/components/contiki-ng-esp32c6/: CMakeLists.txt
esp32-contiki/components/contiki-ng-esp32c6/arch/: clock.c  esp32-dbg-io.c  esp32-watchdoc.c  radio-esp32c6.c  rtimer-arch.c  rtimer-arch.h
esp32-contiki/components/contiki-ng-esp32c6/platform/: contiki-conf.h  contiki-main.c
esp32-contiki/components/contiki-ng-esp32c6/project/: project-conf.h
esp32-contiki/main/: CMakeLists.txt  contiki_example_main.c
